--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^4.0.4
   country_code_picker: ^3.0.0
   pinput: ^2.2.31
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
