--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   country_code_picker: ^3.0.0
   pinput: ^2.2.31
   percent_indicator: ^4.2.3
+  google_maps_flutter: ^2.2.8
 
 dev_dependencies:
   flutter_test:
